Add test for user name and password

--- a/src/app/features/activate-user-account/create-username/create-username.component.html
+++ b/src/app/features/activate-user-account/create-username/create-username.component.html
@@ -85,7 +85,7 @@
               id="confirmPasswordInput"
               name="confirmPasswordInput"
               [class.govuk-input--error]="submitted && getConfirmPassword.errors"
-              type="password"
+              [type]="showPassword ? 'text' : 'password'"
               data-testid="confirmpassword"
             />
           </div>
