push the changes requested in desk check

--- a/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
+++ b/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
@@ -52,6 +52,7 @@
             name="termsAndConditions"
             type="checkbox"
             [formControlName]="'termsAndConditions'"
+            data-testid="checkbox"
           />
           <label class="govuk-label govuk-checkboxes__label" for="termsAndConditions">
             I agree to the
