--- a/src/app/features/activate-user-account/activation-complete/activation-complete.component.html
+++ b/src/app/features/activate-user-account/activation-complete/activation-complete.component.html
@@ -7,12 +7,12 @@
       <span class="govuk-panel__body govuk-!-font-size-19">Your account is now active</span>
     </div>
     <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next?</h2>
-    <p>
-      <a class="text-link" [routerLink]="['/login']">Sign into your account </a> using the username and password that
+    <span>
+      <a class="text-link" [routerLink]="['/login']">Sign into your account</a> using the username and password that
       you've <br />just created.
-    </p>
+    </span>
 
-    <app-details [title]="'Contact us if you have any questions.'">
+    <app-details [title]="'Contact us if you have any questions'">
       <p>
         Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> <br />or email
         <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
