--- a/src/app/features/activate-user-account/create-username/create-username.component.html
+++ b/src/app/features/activate-user-account/create-username/create-username.component.html
@@ -10,7 +10,7 @@
     <form #formEl novalidate (ngSubmit)="checkUsernameDoesntExist()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l govuk-!-margin-bottom-2">User account</span>
+          <span class="govuk-caption-l">User account</span>
           <h1 class="govuk-fieldset__heading">Create your username and password</h1>
         </legend>
 
