--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -100,7 +100,7 @@
           class="govuk-form-group govuk-!-margin-bottom-7"
           [class.govuk-form-group--error]="submitted && form.get('completed').invalid"
         >
-          <fieldset class="govuk-fieldset" aria-describedby="completed-hint" role="group" data-testid="completedDate">
+          <fieldset class="govuk-fieldset" aria-describedby="completed-hint" role="group">
             <legend class="govuk-fieldset__legend">Date completed</legend>
             <span id="completed-hint" class="govuk-hint govuk-!-margin-bottom-4"> For example, 31 3 1980 </span>
             <span *ngIf="submitted && form.get('completed').invalid" id="completed-error" class="govuk-error-message">
@@ -115,7 +115,7 @@
           class="govuk-form-group govuk-!-margin-bottom-7"
           [class.govuk-form-group--error]="submitted && form.get('expires').invalid"
         >
-          <fieldset class="govuk-fieldset" aria-describedby="expires-hint" role="group" data-testid="expiryDate">
+          <fieldset class="govuk-fieldset" aria-describedby="expires-hint" role="group">
             <legend class="govuk-fieldset__legend">Expiry date</legend>
             <span id="expires-hint" class="govuk-hint govuk-!-margin-bottom-4"> For example, 31 3 1980 </span>
             <span *ngIf="submitted && form.get('expires').invalid" id="expires-error" class="govuk-error-message">
@@ -127,7 +127,7 @@
 
         <div class="govuk-character-count govuk-!-margin-bottom-4">
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('notes').invalid">
-            <label class="govuk-label" for="notes"> Notes </label>
+            <label class="govuk-label" for="notes">Add notes </label>
             <span *ngIf="submitted && form.get('notes').invalid" id="notes-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('notes') }}
             </span>
