--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -4,13 +4,8 @@
       <p *ngIf="worker.longTermAbsence" class="govuk-tag govuk-tag--grey asc-tag govuk-!-margin-bottom-0">
         Long-term absent
         <a
-          [routerLink]="[
-            '/workplace',
-            workplace.uid,
-            'training-and-qualifications-record',
-            worker.uid,
-            'long-term-absence'
-          ]"
+          (click)="navigateToLongTermAbsence()"
+          href="javascript:void(0)"
           data-testid="longTermAbsence"
           class="govuk-link govuk-link--no-visited-state govuk-!-padding-left-1"
         >
@@ -37,14 +32,9 @@
         *ngIf="canEditWorker && worker.longTermAbsence === null"
         draggable="false"
         role="button"
+        href="javascript:void(0)"
         data-testid="flagLongTermAbsence"
-        [routerLink]="[
-          '/workplace',
-          workplace.uid,
-          'training-and-qualifications-record',
-          worker.uid,
-          'long-term-absence'
-        ]"
+        (click)="navigateToLongTermAbsence()"
         >Flag long-term absence</a
       >
     </div>
@@ -52,7 +42,7 @@
 </div>
 <div class="govuk-grid-row govuk-!-margin-bottom-5">
   <div class="govuk-grid-column-full">
-    <p class="govuk-body govuk-!-font-size-24">
+    <p>
       <span class="govuk-!-font-weight-bold">Care Certificate:</span>
       {{ worker.careCertificate ? worker.careCertificate : 'Not answered' }}
     </p>
