--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -92,15 +92,15 @@
         <a
           class="govuk-link--no-visited-state govuk-!-font-size-19"
           [attr.data-testid]="'no-mandatory-training-link'"
-          [routerLink]="['../select-record-type']"
-          >Add and manage mandatory training records</a
+          [routerLink]="['/workplace', workplaceUid, 'add-and-manage-mandatory-training']"
+          >Add and manage mandatory training categories</a
         >
       </div>
     </ng-container>
     <ng-template #notMandatoryTraining>
       <div class="govuk-!-margin-bottom-8">
         <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Non-mandatory training</h1>
-        <p class="govuk-body">No non-mandatory training has been added for their job role yet</p>
+        <p class="govuk-body">No non-mandatory training records have been added for this person yet.</p>
         <a
           class="govuk-link--no-visited-state govuk-!-font-size-19"
           [attr.data-testid]="'no-training-link'"
