create new files for the new dashboard and tabs, add stand alone account check to app component and render html conditionally depending on if account is stand alone

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a class="govuk-skip-link" href="#main-content" (click)="skip($event)">Skip to main content</a>
   <app-header></app-header>
 
-  <ng-container *ngIf="dashboardView; else otherView">
+  <ng-container *ngIf="standAloneAccount; else otherView">
     <div id="content">
       <main
         id="main-content"
