change select all/deselect all on multiple training page, make changes to way information is shown on summary

--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -52,7 +52,7 @@
               {{ record.key }}
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ record.value }}
+              {{ record.value | dontKnow }}
             </dd>
             <ng-container *ngIf="i === 0">
               <dd class="govuk-summary-list__actions">
