add tests for search and sort to the view training page, add message if no results are returned from search

--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -10,6 +10,8 @@
   </div>
 
   <div
+    data-testid="sortBy"
+    *ngIf="count > 1"
     class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
   >
     <div class="govuk-form-group">
