--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -88,7 +88,9 @@
     </tbody>
   </table>
   <ng-template #noWorkersFoundInSearch>
-    <p class="govuk-util__bold">There are no matching results</p>
-    <p>Make sure that your spelling is correct.</p>
+    <div class="govuk-!-margin-top-6">
+      <p class="govuk-util__bold">There are no matching results</p>
+      <p>Make sure that your spelling is correct.</p>
+    </div>
   </ng-template>
 </app-table-pagination-wrapper>
