--- a/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
+++ b/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
@@ -16,7 +16,7 @@
   accessibleLabel="staff training records"
   (fetchData)="getTrainingByStatus($event)"
 >
-  <table class="govuk-table" data-testid="table">
+  <table class="govuk-table" data-testid="table" *ngIf="trainingCount; else noTrainingFoundInSearch">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th class="govuk-table__header" scope="col" style="width: 22%">Name or ID number</th>
@@ -87,6 +87,12 @@
       </ng-container>
     </tbody>
   </table>
+  <ng-template #noTrainingFoundInSearch>
+    <div class="govuk-!-margin-top-6">
+      <p class="govuk-util__bold">There are no matching results</p>
+      <p>Make sure that your spelling is correct.</p>
+    </div>
+  </ng-template>
 </app-table-pagination-wrapper>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
