change the grey heading size on the confirm multiple training page

--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row-two-thirds-from-desktop">
   <div class="govuk-grid-column">
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-margin-right-0">
-      <span class="govuk-caption-m">Add multiple records</span>
+      <span class="govuk-caption-l">Add multiple records</span>
       <h1 class="govuk-heading-l">Summary</h1>
     </div>
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
