add permission checks to links on new training page

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -120,6 +120,7 @@
           </td>
           <td class="govuk-table__cell">
             <a
+              *ngIf="canEditWorker"
               class="govuk-link--no-visited-state govuk-util__float-right"
               (click)="actionsListNavigate(actionListItem)"
               href="javascript:void(0)"
