--- a/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
@@ -46,6 +46,7 @@
       <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Qualifications</h1>
       <p class="govuk-body">No qualification records have been added for this person yet.</p>
       <a
+        *ngIf="canEditWorker"
         class="govuk-link--no-visited-state govuk-!-font-size-19"
         [attr.data-testid]="'no-qualification-link'"
         [routerLink]="['../add-qualification']"
