--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -90,7 +90,7 @@
     </div>
   </div>
   <div class="govuk-grid-row">
-    <ng-container *ngIf="!worker.completed">
+    <ng-container *ngIf="!worker.completed && canEditWorker">
       <div class="govuk-grid-column-full">
         <div class="govuk-button-group govuk__flex govuk__justify-content-space-between govuk-!-margin-top-0">
           <p>Check these details before you confirm them.</p>
