--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -17,7 +17,11 @@
     <div class="govuk-form-group">
       <label class="govuk-label" for="sortBy"> Sort by </label>
       <select class="govuk-select govuk-!-width-full" id="sortBy" name="sortBy" (change)="sortBy($event.target.value)">
-        <option *ngFor="let option of sortOptions | keyvalue" value="{{ option.key }}">
+        <option
+          *ngFor="let option of sortOptions | keyvalue"
+          value="{{ option.key }}"
+          [selected]="option.key === sortBySelected"
+        >
           {{ option.value }}
         </option>
       </select>
