--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -34,6 +34,8 @@
     [workers]="workers"
     [workerCount]="workerCount"
     [totalRecords]="totalRecords"
+    [sortByValue]="staffSortByValue"
+    (changeStaffSortBy)="updateSortByValue($event)"
   ></app-training-and-qualifications-summary>
 
   <app-training-and-qualifications-categories
