--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -44,6 +44,8 @@
     [workplace]="workplace"
     [trainingCategories]="trainingCategories"
     [totalTraining]="totalTraining"
+    [sortByValue]="trainingSortByValue"
+    (changeTrainingSortBy)="updateSortByValue($event)"
   ></app-training-and-qualifications-categories>
 </ng-container>
 <ng-template #noStaffRecords>
